fix swagger.json
